Откат изменений.